# market-scanner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  findings.md  findings_scanner_eval.md  findings_scanner_round2.md  fly.toml  progress.md  pyproject.toml  task_plan.md  task_plan_scanner_v2.md
.claude/: settings.json  settings.local.json
.claude/agents/: alembic-migration-reviewer.md  scanner-invariant-reviewer.md
.claude/hooks/: block_dangerous_git.py  format_python.py
.github/workflows/: tests.yml
app/backend/: main.py  main_scanner_only.py  rate_limit.py
app/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
docker/: db_init.py  entrypoint.sh
docs/: DEPLOY.md
scanner_eval/: corroboration.csv  detectors.csv  phase3_bear_2022_quantoff.csv  phase3_bear_2022_quanton.csv  phase3_bull_2023_24_quantoff.csv  phase3_bull_2023_24_quanton.csv  phase3_choppy_2025_quantoff.csv  phase3_choppy_2025_quanton.csv  phase3_summary.json  signals.csv  threshold_sweep_gap.csv  volume_confirm.csv
scripts/: _rewrite_authors.py  ab_backtest.py  ab_backtest_quant_ablation.py  ab_backtest_summary.py  ab_quant_ablation_summary.py  analyze_interestingness.py  analyze_quartile_by_window.py  audit_pv_direction.py  classify_regime_windows.py  compare_evolved_vs_baseline_test.py  eval_corroboration.py  eval_threshold_sweep.py  eval_volume_confirm.py  inspect_db_breakout.py  inspect_run.ps1  measure_intraday_baseline.py  multi_window_oos.py  probe_eodhd.py  recompute_pnl_with_cost.py  rerender_eval_report.py  run_phase3_eval.py  smoke_sector.py  test_eval_corroboration.py  test_eval_threshold_sweep.py  test_eval_volume_confirm.py
src/: main.py
src/agents/: cathie_wood.py  macro_agent.py  michael_burry.py  portfolio_manager.py  scanner_signal.py  sector_agent.py  test_scanner_signal.py  valuation.py  warren_buffett.py
src/graph/: state.py
src/lab/: backtest_runner.py  catalog.py  charts.py  chat.py
src/llm/: models.py  test_models_siliconflow.py
src/paper_trading/: __init__.py  broker.py  engine.py  marks.py  performance.py  report.py  run.py  sleeves.py  state.py  test_broker.py  test_engine.py  test_flow_gating.py  test_marks.py  test_models_migration.py  test_performance.py  test_report.py  test_review_fixes.py  test_run_active_sleeves.py  test_scanner_evolved_graduate.py  test_sleeves.py  test_smoke.py
strategy_skill/: SKILL.md  skill_config.yaml
tests/: _detector_lint.py  test_analyze_flow_repository.py  test_analyze_flow_routes.py  test_analyze_routes.py  test_api_key_crypto.py  test_detector_invariants.py  test_lab_backtest_runner.py  test_lab_chat.py  test_lab_chat_keys.py  test_lab_migration.py  test_lab_models.py  test_lab_repositories.py  test_lab_routes.py  test_lab_schemas.py  test_notification_repository.py  test_notification_routes.py  test_paper_routes.py  test_pipeline_repository.py  test_pipeline_routes.py  test_rate_limit.py  test_report_delivery.py  test_research_chart_route.py  test_research_db_models.py  test_research_integration.py  test_research_repository.py  test_research_repository_delete.py  test_research_routes.py  test_research_schemas.py  test_research_verdict.py  test_scan_broadcaster.py  test_scanner_auto_sop.py  test_scanner_repository.py  test_scanner_routes.py  test_scanner_service.py  test_scanner_watchlist_integration.py  test_scheduler_research_job.py  test_scheduler_service.py  test_screener_db_models.py  test_screener_repository.py  test_spa_serving.py  (+4 more)
(+719 files in other folders)
