[tool.poetry]
name = "ai-hedge-fund"
version = "2026.5.9"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
    { include = "v2", from = "." },
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langchain-anthropic = "0.3.5"
langchain-groq = "0.2.3"
langchain-openai = "^0.3.5"
langchain-deepseek = "^0.1.2"
langchain-ollama = "0.3.6"
langgraph = "0.2.56"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
colorama = "^0.4.6"
questionary = "^2.1.0"
rich = "^13.9.4"
langchain-google-genai = "^2.0.11"
# Backend dependencies
fastapi = {extras = ["standard"], version = "^0.104.0"}
fastapi-cli = "^0.0.7"
pydantic = "^2.4.2"
httpx = "^0.27.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
langchain-gigachat = "^0.3.12"
langchain-xai = "^0.2.5"
scipy = "^1.11.0"
# Scanner cron scheduling (M4)
apscheduler = "^3.10"
# Multi-tenant auth
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# Fernet at-rest encryption for user API keys (APP_ENCRYPTION_KEY)
cryptography = ">=42.0.0"
authlib = "^1.3.0"
email-validator = "^2.1.0"
psycopg2-binary = "^2.9.9"
# IP-keyed rate limiting for the public deploy surface (auth + heavy endpoints)
slowapi = "^0.1.9"
# Analyst data backend for the scanner (M8)
yfinance = "^0.2.66"
# Report rendering deps imported directly on the app startup path: jinja2 (HTML
# templates in src/research/html_render.py) and mplfinance (kline/equity charts
# in src/research/charts/render.py). They were satisfied locally (conda) but the
# slim prod image needs them declared — uvicorn crashed on import without them.
# mplfinance ships only prerelease (bN) versions, so pin the exact known-good one.
jinja2 = "^3.1.0"
mplfinance = "0.12.10b0"
# Phase 8 — A-share data integration (optional [ashare] extra).
# TEMPORARILY REMOVED from the Poetry dependency graph for the Fly deploy:
# mootdx 0.11.7 hard-pins httpx (>=0.25,<0.26), irreconcilable with the app's
# httpx ^0.27.0 (used by langchain/fastapi). Even as an *optional* extra, Poetry
# must resolve it into the single lock, so its presence breaks `poetry lock`
# outright. The A-share code paths import mootdx lazily/guarded
# (v2/data/ashare/mootdx_prices.py wraps it in try/except → Quotes=None;
# src/screener/ashare_metrics.py imports inside the function), so the app runs
# fine without it and A-share is not part of the public deploy. For local A-share
# use, install into the conda env directly: `pip install mootdx stockstats`.
# Re-enable here once mootdx ships an httpx>=0.27-compatible release.
# mootdx = { version = "^0.11.7", optional = true }
# stockstats = { version = "^0.6.2", optional = true }
#
# [tool.poetry.extras]
# ashare = ["mootdx", "stockstats"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true

[tool.poetry.scripts]
backtester = "src.backtesting.cli:main"